--- a/index.html
+++ b/index.html
@@ -10,39 +10,98 @@
 <body>
 
   <script>
-
+    /*
+    - for getHumanChoice just lowercase() it
+    */
     let humanScore = 0;
-    let computerChoice = 0;
+    let computerScore = 0;
 
-    function getComputerChoice(num) {
-      if (num <= 0.300000000000000) {
+    function getComputerChoice() {
+
+      let randomNum = Math.random();
+
+      if (randomNum >= 0 && randomNum <= 1 / 3) {
         return "rock";
-      } else if (num <= 0.600000000000000) {
+      } else if (randomNum > 1 / 3 && randomNum <= 2 / 3) {
         return "paper";
-      } else if (num <= 1) {
+      } else if (randomNum > 2 / 3 && randomNum <= 1) {
         return "scissors";
-
       }
     }
 
-    function getHumanChoice(inputNumber) {
-      return prompt(inputNumber);
+    function getHumanChoice() {
+      let player = prompt("Please input rock, paper, scissors");
+      const regex = /^(rock|paper|scissors)$/gi; // filter out other words than rock, paper, scissors with their variations like “rock”, “ROCK”, “RocK”
+      if (regex.test(player) === true) {
+        return player.toLowerCase();
+      } else if (player === "") {
+        alert("the input still empty");
+      } else if (player === null) {
+        alert("User cancelled the prompt.");
+      }
+      else {
+        alert("Wrong input");
+      }
     }
 
-    function playRound(humanChoice, computerChoice) {
 
+
+    function playRound() {
+      humanChoice = getHumanChoice();
+      computerChoice = getComputerChoice();
+      if (humanChoice === "rock") {
+        if (computerChoice === "rock") {
+          console.log(`It's a tie. You and computer picked ${humanChoice}`)
+        } else if (computerChoice === "paper") {
+          console.log(`You lose. You picked ${humanChoice}, computer picked ${computerChoice}`)
+          computerScore++
+        } else if (computerChoice === "scissors") {
+          console.log(`You win. You picked ${humanChoice}, computer picked ${computerChoice}`)
+          humanScore++
+        }
+      } else if (humanChoice === "paper") {
+        if (computerChoice === "rock") {
+          console.log(`You win. you picked ${humanChoice}, computer picked ${computerChoice}`)
+          humanScore++
+        } else if (computerChoice === "paper") {
+          console.log(`It's a tie. You and computer picked ${humanChoice}`);
+        } else if (computerChoice === "scissors") {
+          console.log(`You lose. You picked ${humanChoice}, computer picked ${computerChoice}`)
+          computerScore++
+        }
+      } else if (humanChoice === "scissors") {
+        if (computerChoice === "rock") {
+          console.log(`You lose. You picked ${humanChoice}, computer picked ${computerChoice}`)
+          computerScore++
+        } else if (computerChoice === "paper") {
+          console.log(`You win. You picked ${humanChoice}, computer picked ${computerChoice}`)
+          humanScore++
+        } else if (computerChoice === "scissors") {
+          console.log(`It's a tie. You and computer picked ${humanChoice}`)
+        }
+      }
     }
 
-    const humanSelection = getHumanChoice();
-    const computerSelection = getComputerChoice();
+    // const humanSelection = getHumanChoice();
+    // const computerSelection = getComputerChoice();
 
-    function humanChoice() {
 
+    function playGame() {
+      for (let i = 0; i < 5; i++) {
+        playRound();
+      }
+
+      console.log(`Player score; ${humanScore}`);
+      console.log(`Computer score; ${computerScore}`);
     }
 
-    // console.log(getComputerChoice(Math.random()))
-    console.log(getHumanChoice());
-    // console.log(Math.random());
+
+
+    playGame()
+
+    // console.log(getComputerChoice());
+    // console.log(getHumanChoice())
+    // getHumanChoice();
 
   </script>
 </body>
